syntax="proto3";
//
message FileListRequest {  
 int32 type=1;
 int32 pageIndex=2;
 int32 pageSize=3;
}
